vuejs/vuejs-tests/testData/ts-plugin/basicErrors/App.vue
<script lang="ts">
const <error descr="TS6133: 'unusedVar' is declared but its value is never read.">unusedVar</error> = 213;
const <error descr="TS2322: Type 'number' is not assignable to type 'string'."><error descr="TS6133: 'abc' is declared but its value is never read.">abc</error></error>: string = 213;
</script>